[package]
name = "buildkite_waiter"
version = "0.2.1"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["os-notifications"]
os-notifications = ["notifica"]

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.1"
clap = "2.33.3"
console = "0.15.0"
dialoguer = "0.9.0"
fern = "0.6.0"
keyring = "0.10.1"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
structopt = "0.3.25"
tokio = "1.12.0"
url = "2.1.1"
reqwest = { version = "0.11.6", features = ["json"] }
secrecy = "0.8.0"
once_cell = "1.4.1"
thiserror = "1.0.30"
heck = "0.3.3"

# feature os-notifications
notifica = { version = "3.0.2", optional = true }

[build-dependencies]
structopt = "0.3.17"
url = "2.1.1"
