[package]
name = "buildkite_waiter"
version = "0.3.0"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["os-notifications"]
os-notifications = ["notifica"]

[dependencies]
# feature os-notifications
notifica = { version = "3.0.2", optional = true }

# common crates
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = "2.34.0"
console = "0.15.8"
dialoguer = "0.11.0"
fern = "0.6.2"
keyring = "0.10.4"
log = "0.4.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.26"
tokio = "1.36.0"
url = "2.5.0"
reqwest = { version = "0.11.26", features = ["json"] }
secrecy = "0.8.0"
once_cell = "1.19.0"
thiserror = "1.0.58"
heck = "0.5.0"

[build-dependencies]
structopt = "0.3.17"
url = "2.1.1"
