[package]
name = "buildkite_waiter"
version = "0.3.0"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liamdawson/buildkite_waiter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["os-notifications"]
os-notifications = ["notifica"]

[dependencies]
# feature os-notifications
notifica = { version = "3.0.2", optional = true }

# common crates
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
console = "0.15.8"
dialoguer = "0.11.0"
fern = "0.6.2"
heck = "0.5.0"
keyring = "2.3.2"
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.11.26", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.58"
tokio = "1.36.0"
url = "2.5.0"

[build-dependencies]
clap = { version = "4.5.2", features = ["derive", "cargo"] }
clap_complete = "4.5.1"
clap_complete_fig = "4.5.0"
url = "2.1.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

include = [
  "target/release/_buildkite_waiter",
  "target/release/_buildkite_waiter.ps1",
  "target/release/buildkite_waiter.bash",
  "target/release/buildkite_waiter.elv",
  "target/release/buildkite_waiter.fish",
  "target/release/buildkite_waiter.ts",
]
