[package]
name = "buildkite_rust"
version = "0.0.1-alpha.1"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# I don't want to give the impression this is a useful general-purpose API for buildkite
publish = false

[dependencies]
bytes = "^0.5.6"
chrono = { version = "0.4.13", features = ["serde"] }
once_cell = "1.4.0"
reqwest = "^0.10.6"
secrecy = "0.7.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
strum = "0.18.0"
strum_macros = "0.18.0"
thiserror = "1.0.20"
url = "^2.1.1"

[dev-dependencies]
mockito = "0.27.0"
tokio = { version = "0.2.22", features = ["macros"] }
